created the user authentication with a robust login connection to the database. Implemented authentication to both users and clients.
