# controllers/user.js
@@ -1,7 +1,6 @@
 const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
 
-
 const getAllUsers = async (req, res) => {
   try {
     const result = await mongodb
@@ -45,6 +44,23 @@ const getUserById = async (req, res) => {
   }
 };
 
+const createUser = async (req, res) => {
+  try {
+    const newUser = {
+      firstName: req.body.firstName,
+      lastName: req.body.lastName,
+      email: req.body.email
+    };
+    const response = await mongodb.getDb().db().collection('users').insertOne(newUser);
+    if (response.acknowledged) {
+      return res.status(201).json({ id: response.insertedId });
+    } else {
+      return res.status(500).json({ message: 'Some error occurred while creating the user.' });
+    }
+  } catch (err) {
+    return res.status(500).json({ error: err.message });
+  }
+};
 
 const updateUser = async (req, res) => {
   try {
@@ -101,6 +117,7 @@ const deleteUser = async (req, res) => {
 module.exports = {
   getAllUsers,
   getUserById,
+  createUser,
   updateUser,
   deleteUser
 };
