# routes/client.js
@@ -1,12 +1,13 @@
 const clientController = require("../controllers/client");
-const clientValidator = require("../middleware/clientValidator");
+const clientValidator = require("../utilities/clientValidator");
+const { isAuthenticated } = require('../utilities/authenticate');
 
 const router = require("express").Router();
 
-router.get("/", clientController.findAll);
-router.get("/:id", clientValidator.validateGetOne, clientController.findOne);
-router.post("/", clientValidator.validateCreate, clientController.create);
-router.put("/:id", clientValidator.validateUpdate, clientController.update);
+router.get("/", isAuthenticated, clientController.findAll);
+router.get("/:id", isAuthenticated, clientValidator.validateGetOne, clientController.findOne);
+router.post("/", isAuthenticated, clientValidator.validateCreate, clientController.create);
+router.put("/:id", isAuthenticated, clientValidator.validateUpdate, clientController.update);
 router.delete(
   "/:id",
   clientValidator.validateDeleteOne,
